Added resume page

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "Token": {
+    "Key": "Super Secret Key"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=sitedatabase.db"
   },
