--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^2.0.6",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
@@ -18,6 +19,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^16.14.0",
+    "react-pdf": "^5.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
@@ -29,6 +31,7 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/react-pdf": "^5.0.2",
     "@types/react-router-dom": "^5.1.6",
     "@types/reactstrap": "^8.7.2",
     "@types/uuid": "^8.3.0",
