--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "Token":{
+    "Key": "00922d9d-3688-455b-a1d4-9398d67ec422"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=sitedatabase.db"
   },
